tests/ui-cases/compile-success-unexpected.stderr
error: ERROR
 --> tests/ui-cases/compile-fail-ok.rs:1:1
  |
1 | compile_error!("ERROR");
  | ^^^^^^^^^^^^^^^^^^^^^^^^
